# Instacart-Online-Grocery-Basket-Analysis---Data-Engineering-Project

./: .env.airflow  .env.airflow.example  .env.example  .envrc  .gitignore  Dockerfile.airflow  README.md  docker-compose.yaml  main.py  pyproject.toml
analytics/: .user.yml  dbt-project.yml  dbt_project.yml  profiles.yml
analytics/models/: src_instacart_raw_template.yml  stg_aisles.sql  stg_departments.sql  stg_order_products_prior.sql  stg_orders.sql  stg_products.sql
config/: airflow.cfg
dags/: instacart_dag.py
iac/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
pipelines/: create_external_tables.py  download_datasets.py  test.py  upload_data_to_gcs.py
